additional visual tests

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -3248,6 +3248,12 @@ Anchor variants:<br />
         Footer
       </div>
     </div>
+
+    <h3>Card - link test</h3>
+    <a href="#" class="card card-block">
+      <h4 class="card-text">Entire card as link</h4>
+      <p class="card-text">This is some text</p>
+    </a>
  </div>
 
 <h3>Card group</h3>
@@ -3345,6 +3351,10 @@ Anchor variants:<br />
       <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
     </div>
   </div>
+  <a href="#" class="card card-block">
+    <h4 class="card-text">Entire card as link</h4>
+    <p class="card-text">This is some text</p>
+  </a>
   <div class="card card-block">
     <blockquote class="card-blockquote">
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
