--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -3156,7 +3156,7 @@ Anchor variants:<br />
         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
       </div>
-      <img class="card-img-bottom img-reponsive" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+      <img class="card-img-bottom img-responsive" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
     </div>
 
     <h3>Card - image overlay</h3>
